[project]
name = "util-fns"
authors = [
    {name = "Dave Hall", email = "skwashd@gmail.com"},
]
description = "Utility Lambda functions designed to be called from AWS Step Functions."

dependencies = [
]

requires-python = ">=3.13,<3.14" # Match lambda runtime

dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "aws-lambda-powertools==3.16.0",
  "pytest==8.4.1",
  "coverage==7.10.5",
  "pytest-mock==3.14.1",
  "ruff==0.12.2",
]

[tool.setuptools-git-versioning]
enabled = true

[tool.ruff.lint]
# Rules listed at https://github.com/charliermarsh/ruff#supported-rules
select = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
ignore = ["D203", "D211", "D212", "E501", "F403", "F405"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"test_*" = ["S101", "S108"]