[project]
name = "util-fns"
authors = [
    {name = "Dave Hall", email = "skwashd@gmail.com"},
]
description = "Utility Lambda functions designed to be called from AWS Step Functions."

dependencies = [
]

requires-python = ">=3.13,<3.14" # Match lambda runtime

dynamic = ["version"]

[dependency-groups]
dev = [
  "aws-lambda-powertools==3.23.0",
  "coverage==7.11.3",
  "mypy==1.18.2",
  "pytest-mock==3.15.1",
  "pytest==9.0.1",
  "ruff==0.14.4",
]

[tool.mypy]
mypy_path = "functions"
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true

[tool.pytest.ini_options]
addopts = "--ignore=deprecated-functions/"
pythonpath = ["functions"]

[tool.ruff]
exclude = ["deprecated-functions"]

[tool.ruff.lint]
# Rules listed at https://github.com/charliermarsh/ruff#supported-rules
select = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "CPY", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
ignore = ["D203", "D211", "D212", "E501", "F403", "F405"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "CPY", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"test_*" = ["S101", "S108"]
# Can't copyright trivial works.
"__init__.py" = ["CPY001"]
